# Voice-Chat-Application

./: CMakeLists.txt  README.md  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: voiceserver.cpp  voiceserver.h  voiceserver_main.cpp
